add vue2-leaflet-geosearch (module+home)

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>letsmeet</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@2.6.0/assets/css/leaflet.css">
   </head>
   <body>
     <noscript>
